# calligra-plugin

./: CMakeLists.txt  MyShape.cpp  MyShape.h  MyShapeFactory.cpp  MyShapeFactory.h  MyTool.cpp  MyTool.h  MyToolFactory.cpp  MyToolFactory.h  calligra_shape_myshape.desktop  myplugin.pro
dialogs/: PartsWidget.cpp  PartsWidget.h  PartsWidget.ui
music/: MusicTool.cpp  MyTool.h
